--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "googleapis": "^144.0.0",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.465.0",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
     "react-day-picker": "^9.4.1",
     "react-dom": "^18.0.0",
+    "react-i18next": "^15.1.3",
     "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.0.0"
