--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/dates": "^7.14.3",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "autoprefixer": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
